--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                     <p class="about__page-text">Вибачте! Сторінка на доопрацюванні</p>
                 </div>
             </section>
+            <section class="about" id="product">
+                <div class="about__page">
+                    <h1 class="about__page-title">Продукт</h1>
+                    <p class="about__page-text">Вибачте! Сторінка на доопрацюванні</p>
+                </div>
+            </section>
             <section class="contact" id="contact">
                 <div class="contact__page">
                     <h1 class="contact__page-title">Контакт</h1>
